Inclusao sistema sudeste

--- a/treinamento-sites-master/sistema_sudeste/index.html
+++ b/treinamento-sites-master/sistema_sudeste/index.html
@@ -34,7 +34,7 @@
 		    <thead>
 		      <tr>
 		        <th>Pedido</th>
-		        <th>Valor Pedido</th>
+		        <th>Valor do Pedido</th>
 		        <th>Hora do Pedido</th>
 		        <th>Finalizar</th>
 		      </tr>
