Inclusao sistema sudeste

--- a/treinamento-sites-master/sistema_sudeste/index.html
+++ b/treinamento-sites-master/sistema_sudeste/index.html
@@ -21,7 +21,7 @@
 				<input type="text" class="form-control" name="" id="modeloVeiculo" placeholder="Digite o Pedido...">
 			</div>
 			<div class="form-group">
-				<label>Valor : (Com Vírgula)</label>
+				<label>Valor :</label><small>(Com Vírgula)</small>
 				<input type="text" class="form-control" name="" id="placaVeiculo" placeholder="Digite o valor do pedido...">
 			</div>
 			<button type="submit" class="btn btn-primary">Adicionar</button>
