--- a/treinamento-sites-master/sistema_sudeste/index.html
+++ b/treinamento-sites-master/sistema_sudeste/index.html
@@ -21,8 +21,8 @@
 				<input type="text" class="form-control" name="" id="modeloVeiculo" placeholder="Digite o Pedido...">
 			</div>
 			<div class="form-group">
-				<label>Valor :</label><small>(Com Vírgula)</small>
-				<input type="text" class="form-control" name="" id="placaVeiculo" placeholder="Digite o valor do pedido...">
+				<label>Valor :</label>
+				<input type="text" class="form-control" name="" id="placaVeiculo" placeholder="Digite o valor do pedido com vírgula...">
 			</div>
 			<button type="submit" class="btn btn-primary">Adicionar</button>
 		</form>
